; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_client.c_mpv_create_weak_client.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_client.c_mpv_create_weak_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mpv_create_weak_client(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32* @mpv_create_client(i32* %6, i8* %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @mp_client_set_weak(i32* %12)
  br label %14

14:                                               ; preds = %11, %2
  %15 = load i32*, i32** %5, align 8
  ret i32* %15
}

declare dso_local i32* @mpv_create_client(i32*, i8*) #1

declare dso_local i32 @mp_client_set_weak(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
